update txt Lorem

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -6,14 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/components.css">
+    <link rel="stylesheet" href="../aionbook_theme/css/components.css">
     <link rel="stylesheet" href="../aionbook_theme/css/common.css">
     <link rel="stylesheet" href="../aionbook_theme/css/pages.css">
-    <!-- 메인 수정중이어서, 잠시 page 경로 수정 -->
-    <!-- <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/pages.css"> -->
-    <!-- <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/common.css"> -->
-
-    <!-- 과정 카드 css추가 -->
     <link rel="stylesheet" href="../aionbook_theme/css/coursegrid.css">
     <link rel="stylesheet" href="../aionbook_theme/css/learning.css">
     <link rel="stylesheet" href="../aionbook_theme/css/circle.css">
@@ -39,13 +34,13 @@
 
     <div class="desktop-header">
       <header class="desktop-header__inner">
-        <a href="/" class="desktop-header__logo">
+        <a href="index.html" class="desktop-header__logo">
           <img src="../aionbook_theme/images/home/onbooklogo.png"/>
         </a>
         <nav class="gnb">
           <div class="gnb__menu">
             <div class="gnb__item">
-              <a href="/course_intro" class="gnb__link">학습</a>
+              <a href="class.html" class="gnb__link">학습</a>
             </div>
       
             <!--
@@ -74,14 +69,14 @@
               메뉴버튼
             </div>
           </button>
-          <a href="/" class="mobile-header__logo">
+          <a href="index.html" class="mobile-header__logo">
             <img src="../aionbook_theme/images/home/onbooklogo.png"/>
           </a>
         </div>
         <div class="mobile-gnb">
           <div class="mobile-gnb__menu">
             <div class="mobile-gnb__item">
-              <a href="/course_intro" class="mobile-gnb__link">학습</a>
+              <a href="class.html" class="mobile-gnb__link">학습</a>
             </div>
       
             <!--
@@ -428,7 +423,7 @@ document.addEventListener('DOMContentLoaded', function() {
           </div>
           <div class="pricetable_text">
             <p>*위 가격은 학교(중(점)고교,대학)기준가이며, <strong>재직자의 경우 별도 협의 필요.</strong> 최종 가격은 <strong>인원수/수강기간 등에 따라 협의 가능</strong></p>
-            <p>(문의: <strong>sanders.lee@theailab.co</strong>)</p>
+            <p>(문의: <strong>3sheepspark@gmail.com</strong>)</p>
           </div>
         </div>
       </section>
@@ -447,11 +442,11 @@ document.addEventListener('DOMContentLoaded', function() {
         <div class="inquiry__row">
           <div class="inquiry__input">
             <label for="user-name">기업・기관명</label>
-            <input type="text" id="inquiry_name" name="inquiry_name" placeholder="더에이아이랩" />
+            <input type="text" id="inquiry_name" name="inquiry_name" placeholder="Yiyangse" />
           </div>
           <div class="inquiry__input">
             <label for="email">이메일</label>
-            <input type="text" id="inquiry_email" name="inquiry_email" placeholder="theailab@naver.com" />
+            <input type="text" id="inquiry_email" name="inquiry_email" placeholder="3sheepspark@gmail.com" />
           </div>
         </div>
         <div class="inquiry__row">
@@ -582,9 +577,9 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
     <div class="desktop-footer__bottom">
       <div class="desktop-footer__company-info">
-        더에이아이랩 ㈜, 대표: 최영준 | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a><br>
-        사무실: 서울시 강남구 선릉로 108길 9, 5층 | 통신판매신고번호 제 2020-서울강남-02380 | 사업자등록번호 439-87-00757<br>
-        © The AI Lab. All rights reserved.
+        YIYANGSE ㈜, 대표: 박세양 | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a><br>
+        사무실: 서울시 강남구  | 통신판매신고번호 제 0000-서울강남-00000 | 사업자등록번호 000-00-00000<br>
+        © YIYANGSE. All rights reserved.
       </div>
     </div>
   </div>
@@ -619,12 +614,10 @@ document.addEventListener('DOMContentLoaded', function() {
 </div>
     <div class="mobile-footer__bottom">
       <div class="mobile-footer__company-info">
-        더에이아이랩 ㈜, 대표: 최영준<br>
-        사업자등록번호: 439-87-00757<br>
-        통신판매신고번호: 제 2020-서울강남-02380<br>
-        주소: 서울특별시 강남구 선릉로 108길 9 5층<br>
-        © The AI Lab. All rights reserved.
-      </div>
+          YIYANGSE ㈜, 대표: 박세양 | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a><br>
+          사무실: 서울시 강남구  | 통신판매신고번호 제 0000-서울강남-00000 | 사업자등록번호 000-00-00000<br>
+          © YIYANGSE. All rights reserved.
+        </div>
   </div>
 </div>
 </footer>
