update image card section

--- a/aionbook/class.html
+++ b/aionbook/class.html
@@ -360,5 +360,81 @@
             </ul>
         </div>
     </section>
+
+<!-- Desktop Footer -->
+<div>
+    <footer class="desktop-footer">
+      <div class="desktop-footer__inner">
+        <img src="../aionbook_theme/images/home/onbooklogofooter.png" alt="The AI Lab" class="desktop-footer__logo">
+        <div class="desktop-footer__top">
+          <div class="desktop-footer__section">
+            <h3 class="desktop-footer__section-title">서비스</h3>
+            <ul class="desktop-footer__nav-list">
+              <li class="desktop-footer__nav-item"><a href="#">초대 가이드</a></li>
+              <li class="desktop-footer__nav-item"><a href="#">요금 안내</a></li>
+            </ul>
+          </div>
+          <div class="desktop-footer__section">
+            <h3 class="desktop-footer__section-title">비즈니스</h3>
+            <ul class="desktop-footer__nav-list">
+              <li class="desktop-footer__nav-item"><a href="#">회사소개</a></li>
+              <li class="desktop-footer__nav-item"><a href="#">그룹교육</a></li>
+            </ul>
+          </div>
+          <div class="desktop-footer__section">
+            <h3 class="desktop-footer__section-title">패밀리사이트</h3>
+            <ul class="desktop-footer__nav-list">
+              <li class="desktop-footer__nav-item"><a href="#">코딩엑스</a></li>
+              <li class="desktop-footer__nav-item"><a href="#">AI온북</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="desktop-footer__bottom">
+          <div class="desktop-footer__company-info">
+            YIYANGSE ㈜, 대표: 박세양 | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a><br>
+            사무실: 서울시 강남구  | 통신판매신고번호 제 0000-서울강남-00000 | 사업자등록번호 000-00-00000<br>
+            © YIYANGSE. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+    
+    <!-- Mobile Footer -->
+    <footer class="mobile-footer">
+      <div class="mobile-footer__inner">
+      <img src="../aionbook_theme/images/home/onbooklogofooter.png" alt="The AI Lab" class="mobile-footer__logo">
+      <div class="mobile-footer__top">
+      <div class="mobile-footer__section">
+        <h3 class="mobile-footer__section-title">서비스</h3>
+        <ul class="mobile-footer__nav-list">
+          <li class="mobile-footer__nav-item"><a href="#">초대 가이드</a></li>
+          <li class="mobile-footer__nav-item"><a href="#">요금 안내</a></li>
+        </ul>
+      </div>
+      <div class="mobile-footer__section">
+        <h3 class="mobile-footer__section-title">비즈니스</h3>
+        <ul class="mobile-footer__nav-list">
+          <li class="mobile-footer__nav-item"><a href="#">회사소개</a></li>
+          <li class="mobile-footer__nav-item"><a href="#">그룹교육</a></li>
+        </ul>
+      </div>
+      <div class="mobile-footer__section">
+        <h3 class="mobile-footer__section-title">패밀리사이트</h3>
+        <ul class="mobile-footer__nav-list">
+          <li class="mobile-footer__nav-item"><a href="#">코딩엑스</a></li>
+          <li class="mobile-footer__nav-item"><a href="#">AI온북</a></li>
+        </ul>
+      </div>
+    </div>
+        <div class="mobile-footer__bottom">
+          <div class="mobile-footer__company-info">
+              YIYANGSE ㈜, 대표: 박세양 | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a><br>
+              사무실: 서울시 강남구  | 통신판매신고번호 제 0000-서울강남-00000 | 사업자등록번호 000-00-00000<br>
+              © YIYANGSE. All rights reserved.
+            </div>
+      </div>
+    </div>
+    </footer>
+    </div>
 </body>
 </html>
